# autonomous-general-projects

./: README.md
teknofest-2025-autonomous-vehicle/localization/hdl_localization/launch/: hdl_localization.launch
teknofest-2025-autonomous-vehicle/localization/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
teknofest-2025-autonomous-vehicle/localization/robot_localization/launch/: local_localization.launch
teknofest-2025-autonomous-vehicle/localization/robot_localization/params/: local_localization.yaml
teknofest-2025-autonomous-vehicle/localization/rtabmap_odometry/launch/: rtabmap.launch
teknofest-2025-autonomous-vehicle/localization/wheel_odometry/: CMakeLists.txt  package.xml
teknofest-2025-autonomous-vehicle/localization/wheel_odometry/launch/: wheel_odom.launch
teknofest-2025-autonomous-vehicle/localization/wheel_odometry/src/: ackermann_rpm_odometry.cpp
teknofest-2025-autonomous-vehicle/navigation/mini_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
teknofest-2025-autonomous-vehicle/navigation/mini_navigation/launch/: nav_sigun_son.launch
teknofest-2025-autonomous-vehicle/navigation/mini_navigation/rviz/: navigation_rviz.rviz
teknofest-2025-autonomous-vehicle/parking_area_detection/: Object_Detection_to_3D_distance.py  Sub_3D_Pose_to_Parking_Zone.py
teknofest-2025-autonomous-vehicle/sign_detection/models/: detection_model.pt
teknofest-2025-autonomous-vehicle/sign_detection/scripts/: yolo_docker.py
