<?xml version="1.0"?>
<package format="2">
  <name>wheel_odom</name>
  <version>1.0.0</version>
  <description>Ackermann kinematics odometry publisher for outdoor autonomous vehicles.</description>

  <maintainer email="ozsoyb943@gmail.com">Burak Ozsoy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>smart_can_msgs</build_depend> <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>smart_can_msgs</exec_depend>
</package>
